# ksnip

./: .gitignore  .travis.yml  God-Bless-You-10-rounds-repo-root_v2.sh  README.md  README_PYQT6_PORT.md  ROADMAP.md  pyproject.toml
.github/workflows/: windows.yml
debian/: changelog  control
ksnip_py/: __init__.py  app.py  canvas.py  capture.py  main_window.py  ocr_backend.py  ocr_result_dialog.py  pin_window.py  settings_dialog.py  spellcheck.py  uploader.py  watermark.py
scripts/: build_appImage.sh
src/backend/imageGrabber/: AbstractRectAreaImageGrabber.cpp  AbstractRectAreaImageGrabber.h  BaseX11ImageGrabber.cpp  BaseX11ImageGrabber.h  MacImageGrabber.h  X11ImageGrabber.cpp  X11ImageGrabber.h
src/backend/ipc/: IpcClient.h
src/backend/saver/: ImageSaver.h
src/common/adapter/fileDialog/: FileDialogAdapterFactory.h
src/common/enum/: CaptureModes.h
src/common/platform/: CommandRunner.cpp  CommandRunner.h
src/gui/aboutDialog/: AuthorTab.cpp
src/gui/operations/: UploadOperation.h
src/gui/settingsDialog/: ImageGrabberSettings.h
src/gui/snippingArea/: AbstractSnippingArea.cpp  AbstractSnippingArea.h  WaylandSnippingArea.h  X11SnippingArea.cpp  X11SnippingArea.h
translations/: ksnip_gl.ts  ksnip_hr.ts
